[project]
name = "zensvi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yotsubo", email = "513047.otsubo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
zensvi-tutorial = "zensvi_tutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
